--- a/templates/form_jugador.html
+++ b/templates/form_jugador.html
@@ -16,7 +16,7 @@
     <input type="number" name="edad" required>
 
     <label> Número de camisa: </label>
-    <input type="number"  name="ncamiseta" min="1" max="99" required>
+    <input type="number"  name="num" min="1" max="99" required>
 
 
     <label>Posición:</label>
@@ -33,10 +33,10 @@
     <input type="float" name="altura" value="1.50" required>
 
      <label>peso (Kg):</label>
-    <input type="float" name="peso" value="50" required>
+    <input type="Float" name="peso" value="50" required>
 
-    <label>Ingreso :</label>
-    <input type="date" name="peso" value="50" required>
+    <label>Año de ingreso  :</label>
+    <input type="number" name="ingreso"  required>
 
     <label>Pie dominante:</label>
     <input type="text" name="pie" required>
