--- a/templates/partidos.html
+++ b/templates/partidos.html
@@ -1,11 +1,15 @@
+{% extends "base.html" %}
+{% block title %}Partidos{% endblock %}
+
+{% block content %}
 <h1>Partidos</h1>
 
-<ul>
 {% for p in partidos %}
-    <li>
-        VS {{ p.rival }} → {{ p.goles_favor }} - {{ p.goles_contra }}
-    </li>
+<div class="card">
+    {{ p.local }} vs {{ p.visitante }} <br>
+    Resultado: {{ p.goles_local }} - {{ p.goles_visitante }} <br>
+    Fecha: {{ p.fecha }}
+</div>
 {% endfor %}
-</ul>
 
-<a href="/">Volver</a>
+{% endblock %}
